[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/firstPage/assets1280x720.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/SHOWG.TTF" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/ui/pause.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "close"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("container:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 50 ), Vector2( 0, -1280 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("container:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1280 ), Vector2( 0, 50 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="pausePage" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 6.10352e-05
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -100.0
margin_bottom = -100.0
custom_fonts/font = SubResource( 1 )
text = "Game Over !!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="container" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Sprite" parent="container"]
modulate = Color( 0.556863, 0.956863, 1, 1 )
position = Vector2( 373.03, 533.474 )
scale = Vector2( 1.07033, 0.36758 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0.00643921, 1.16791, 542.021, 799.008 )

[node name="exit" type="Sprite" parent="container"]
position = Vector2( 501.568, 528.324 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 647.368, 190.159, 89.4737, 92.6316 )

[node name="exit2" type="Button" parent="container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 419.0
margin_top = 454.0
margin_right = 584.0
margin_bottom = 611.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="home" type="Sprite" parent="container"]
position = Vector2( 226.096, 527.093 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 550.721, 192.995, 97.4963, 89.7586 )

[node name="homeBtn" type="Button" parent="container"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 139.0
margin_top = 445.0
margin_right = 307.0
margin_bottom = 606.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/close = SubResource( 2 )
anims/inst = SubResource( 3 )
[connection signal="button_up" from="container/exit2" to="." method="_on_exit2_button_up"]
[connection signal="button_up" from="container/homeBtn" to="." method="_on_homeBtn_button_up"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
